<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csmbus</name>
  <version>1.0.0</version>
  <description>CSMbus library for ros2</description>
  <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>tutrc_ament_node</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  
  <depend>blackbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
